==========================
django-ostracker changelog
==========================

0.2.0
=====

0.1.0
=====
    - initial version from within services project